--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -1,13 +1,22 @@
 
-/* changer les logos, rogner les logos , diminuer la hauteur du formulaire choix du contrat, approcher logo réinitialiser de son texte
+/*  Diminuer la hauteur du formulaire choix du contrat, 
 ajouter image a droite des offres, améliorer les offres, ajouter image de carte à droite des offres
 améliorer le paging 
 aligner photo de l'agence avec le texte 
-faire le footer*/
+
+UTILISER fontawesome
+optimiser le code
+terminer le code */
 
 @font-face {
-    font-family: "Baloo2-Bold";
-    src: url("/asset/fonts-family/Baloo2-Medium.ttf") format(truetype);
+    font-family: "Baloo 2";
+    src: 
+        url("/asset/fonts-family/Baloo2-Medium.ttf") format(truetype);
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("/asset/fonts-family/OpenSans/OpenSans-Regular.ttf") format(truetype);
 }
 
 * {
@@ -240,11 +249,34 @@ body header nav a:hover {
     text-align: justify;
 }
 
-.team_photo {
+.agency-photo {
+    display: flex;
+   align-items: center;
+}
+
+.photo123 {
     display: flex;
     justify-content: space-around;
-    margin-left: 300px;
-    margin-top: 30px;
+    margin-top: 40px;
+}
+
+.slogan{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+.agency
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 110px ;
+}
+
+h3 {
+    margin-bottom:50px;
 }
 
 figcaption {
@@ -252,6 +284,45 @@ figcaption {
     margin-left: 50px;
     margin-bottom: 15px;
     font-size: large;
+}
+
+.span {
+    margin-top: 200px;
+}
+
+.photo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+#lil {
+    margin-right: 250px;
+}
+
+#lol {
+    display: flex;
+    justify-content: center;
+}
+
+.description{
+    margin-left: 60px;
+    margin-right: 60px;
+   display: flex;
+   justify-content: center;
+}
+
+i {
+    margin-left: 60px;
+    margin-right: 60px;
+   display: flex;
+   justify-content: center;
+}
+
+figcaption {
+    display: flex;
+    justify-content: center;
 }
 
 .main-menu {
@@ -300,6 +371,7 @@ nav a, nav p {
 .footer-menu {
     display: flex;
     flex-direction: column;
+    margin-top: 5px;
 }
 
 .copyright {
@@ -307,5 +379,32 @@ nav a, nav p {
     text-align: center;
     color: white;
     padding-bottom: 15px;
-    padding-top: 10px;
+    padding-top: 40px;
+}
+
+li {
+    margin-top: 25px;
+    list-style: none;
+}
+
+li a:hover {
+    text-decoration: underline;
+}
+
+li p:hover {
+    text-decoration: underline;
+}
+
+.footer-menu p {
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
+nav.footer-menu {
+    padding-top: 10px ;
+    text-align: center;
+}
+
+#number {
+    margin-top: 22px;
 }
