--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -1,4 +1,4 @@
-. {
+* {
     margin: 0;
     padding: 0;
 }
@@ -13,14 +13,14 @@
 /* initialise flex*/
 header {
     display: flex;
-    background-color: #B1F3BC;
-    
+    background-color: #B1F3BC;    
     
 }
 
 .menu {
     /*remove point and use special font*/
     display: flex;
+    padding-top: 20px;
     margin-right: 20px;
     justify-content: center;
     list-style-type: none;
@@ -39,6 +39,7 @@ header {
 
 .compte {
     display: flex;
+    padding-top: 20px;
     width: 100%;
     justify-content: flex-end;
     margin-right: 20px;
@@ -61,9 +62,11 @@ header {
 }
 
 .backpict {
-    display: flex;
     position: absolute;
-    justify-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 .title-search {
