--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -74,7 +74,7 @@ header {
     justify-content: center;
     position: relative;
     padding-top: 10px;
-    padding-bottom: 390px;
+    margin-bottom: 390px;
 }
 
 
