--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -62,25 +62,61 @@ header {
 }
 
 .backpict {
-    position: absolute;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+    text-align: center;
 }
 
 .title-search {
     display: flex;
     justify-content: center;
-    position: relative;
-    padding-top: 10px;
-    margin-bottom: 390px;
+    
 }
 
-.posi {
-    position: absolute;
-    background-color: white;
+p {
+    margin-bottom: 24px;
 }
 
+.compo-search {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    background: #B1F3BC;
+
+}
+
+.infos-serv {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    margin-top: 10px;
+    
+}
+
+.infos-serv-label {
+    display: flex;
+    padding: 12px;
+}
+
+.infos-serv-label div {
+    margin-right: 12px;
+}
+
+.infos-links {
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 10px;
+    
+}
+
+#ordre {
+    display: flex;
+    justify-content: center;
+    padding-right: 12px;
+    width: 300px;
+}
+.ordre:nth-of-type(1) {order: 1;}
+.ordre:nth-of-type(2) {order: 2;}
+.ordre:nth-of-type(3) {order: 3;}
 
 
