--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -113,7 +113,8 @@ p {
     display: flex;
     justify-content: center;
     padding-right: 12px;
-    width: 300px;
+    padding-bottom: 12px;
+    width: 400px;
 }
 .ordre:nth-of-type(1) {order: 1;}
 .ordre:nth-of-type(2) {order: 2;}
