--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -118,10 +118,8 @@ nav li a.active:hover,
     gap: 10px;
 }
 
-.account-connexion span:nth-child(1) {
-    height: 24px;
-    width: 24px;
-    border: var(--footer-color) solid var(--border-size);
+.fa-user {
+    font-size: 1.1rem;
 }
 
 
@@ -144,11 +142,12 @@ nav li a.active:hover,
     height: 100%;
     margin-top: 0;
     border-radius: 0 0 var(--border-radius) var(--border-radius);
+    filter: blur(3px);
 }
 
 .title-absolute {
     position: absolute;
-    top: 250px;
+    top: 400px;
     padding: 0 30px 15px;
     background-color: white;
     border-radius: var(--border-radius);
