--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -2,34 +2,23 @@
 /*  Diminuer la hauteur du formulaire choix du contrat, 
 ajouter image a droite des offres, améliorer les offres, ajouter image de carte à droite des offres
 améliorer le paging 
-aligner photo de l'agence avec le texte 
-
-UTILISER fontawesome
 optimiser le code
 terminer le code */
 
-@font-face {
-    font-family: "Baloo 2";
-    src: 
-        url("/asset/fonts-family/Baloo2-Medium.ttf") format(truetype);
-}
-
-@font-face {
-    font-family: "Open Sans";
-    src: url("/asset/fonts-family/OpenSans/OpenSans-Regular.ttf") format(truetype);
-}
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600; 1 700 ; 1 800 & display=swap');
 
 * {
     margin: 0;
     padding: 0;
     color: inherit;
     text-decoration: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: "baloo 2"
 }
 
 header {
     background: #B1F3BC;
-    padding:10px;
+    padding: 0.625rem;
     display: flex;
     justify-content: space-between;
     font-family: "Baloo2-Bold";
@@ -38,7 +27,7 @@ header {
 body header nav a {
     text-decoration: none;
     color: #1F1F1F;
-    margin: 30px;
+    margin: 1.875rem;
     font-size: medium;
 }
 
@@ -46,24 +35,26 @@ body header nav a:hover {
     font-weight: bold;
 }
 
-.auth {
+#user-logo {
     text-decoration: none;
-    color: #1F1F1F;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: medium;
-    margin-top: 7px;
+    margin-top: 0.738px;
 }
 
 .auth:hover {
     font-weight: bold;
 }
 
+.logo-auth {
+    margin-top: 0.5rem;
+}
+
+
 #account {
-    margin-top: 6px;
+    margin-top: 0.375rem;
 }
 
 .menu {
-    margin-top: 8px;
+    margin-top: 0.5rem;
 }
 
 .section1 {
@@ -74,25 +65,49 @@ body header nav a:hover {
     color: white;
     text-align: center;
     font-size: larger;
-    padding-top: 25px;
+    padding-top: 1.563rem;
 }
 
 .section1-form {
     display: flex;
     justify-content: center;
-    padding-top: 25px;
-    gap: 70px;
+    padding-top: 0.023rem;
+    gap: 4.375rem;
 }
 
 #form {
-    border-radius: 5px;
-    padding-left: 10px;
+    border-radius: 0.313rem;
+    padding-left: 2rem;
 }
+
+::placeholder {
+    color: #1F1F1F;
+}
+
+.logo-form, .logo-form2 {
+    position: relative;
+  }
+
+  .logo-form i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color:#1F1F1F 
+  }
+
+  .logo-form2 i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color:#1F1F1F 
+  }
 
 #research {
     background-color: #B1F3BC;
-    border-radius: 5px;
-    padding: 5px;
+    border-radius: 0.313rem;
+    padding: 0.313remx;
     cursor: pointer;
 }
 
@@ -108,12 +123,11 @@ body header nav a:hover {
 
 .refresh-logo-reinitiate {
     display: flex;
-    margin: 0 20px;
-    margin-top: 9px;
+    margin: 0 1.25rem;
 }
 
 .refresh-logo, .reinitiate {
-    margin: 4px;
+    margin: 0.25rem;
 }
 
 .reinitiate:hover {
@@ -123,28 +137,29 @@ body header nav a:hover {
 .form-contract {
     display: flex;
     justify-content: center;
-    padding-top: 20px;
-    gap: 20px;
-    padding-bottom: 25px;
+    padding-top: 1.25rem;
+    gap: 1.25rem;
+    padding-bottom: 1.563rem;
 }
 
 .reinitiate {
-    padding-bottom: 10px;
+    padding-bottom: 0.625rem;
 }
 
 .section2-title {
-    padding-top: 20px;
-    padding-left: 65px;
+    padding-top: 1rem;
+    padding-left: 4.063rem;
     font-size: x-large;
+
 }
 
 .section2-photos {
-    width: 150px;
-    height: 100px;
-    border: 30px solid #B1F3BC;
-    border-radius: 15px;
-    margin-left: 40px;
-    margin-top: 20px;
+    width: 9.375rem;
+    height: 6.25rem;
+    border: 1.875rem solid #B1F3BC;
+    border-radius: 0.938rem;
+    margin-left: 2.5rem;
+    margin-top: 1.25rem;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: smaller;
     white-space: nowrap;;
@@ -158,8 +173,8 @@ body header nav a:hover {
 }
 
 #offer-photo {
-    border-radius: 20px;
-    padding-bottom: 5px;
+    border-radius: 0.938rem;
+    padding-bottom: 0.313rem;
 } 
 
 .photos-map {
@@ -167,7 +182,7 @@ body header nav a:hover {
 }
 
 #map {
-    margin-left: 300px;
+    margin-left: 8.5rem;
 }
 
 /* je ne parviens pas à arrondir les bords de mes offer-photo */
@@ -175,28 +190,47 @@ body header nav a:hover {
 .paging {
     display: flex;
    list-style: none;
-    margin-left: 120px;
-    margin-top: 10px;
+    margin-left: 7.5rem;
+    margin-top: -3.375rem;
 }
 
 .paging li {
-    margin: 0 25px;
+    margin: 0 1.563rem;
     text-decoration: none;
+}
+
+.inside {
+    padding-top: 1px;
 }
 
 .paging a {
     display: block;
-    padding: 10px;
+    padding: 0.625rem;
     text-decoration: none;
-    border: 1px solid green;
-    border-radius: 25px;
-    transition: background-color 0.3s;
+    border: 0.063rem solid #B1F3BC;
+    border-radius: 2rem;
+}
+
+#page-select {
+  appearance: none;
+  -moz-appearance: none;
+  border: 2px solid #B1F3BC;
+  border-radius: 50px; /* La moitié de la hauteur pour créer un cercle */
+  padding: 10px; /* Ajoutez du rembourrage pour un meilleur aspect */
+  cursor: pointer;
+}
+
+.agent {
+    margin-left: 0;
+    padding-left: 0px;
+    text-align: center;
 }
 
 #announce-number {
-    margin-left: 320px;
+    margin-left: 20rem;
     color: grey;
     font-size: x-small;
+    margin-top: 5px;
 }
 
 .section2 {
@@ -209,8 +243,8 @@ body header nav a:hover {
     border: 10px solid #B1F3BC;
     border-radius: 15px;
     margin-left: 500px;
-    margin-top: 25px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: smaller;
     text-align: center;
@@ -223,7 +257,6 @@ body header nav a:hover {
     background-color: #1F1F1F;
     color: white;
     border-radius: 5px;
-    margin-top: 5px;
     cursor: pointer;
 }
 
@@ -263,7 +296,7 @@ body header nav a:hover {
 .slogan{
     display: flex;
     justify-content: space-around;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 .agency
@@ -271,12 +304,11 @@ body header nav a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 10px;
-    margin-top: 110px ;
+    margin-top: 8px ;
 }
 
 h3 {
-    margin-bottom:50px;
+    margin-bottom: 30px;
 }
 
 figcaption {
@@ -293,17 +325,29 @@ figcaption {
 .photo {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-bottom: 30px;
+    margin-left: 20px;
 }
 
-#lil {
-    margin-right: 250px;
+#agency {
+    margin-right: 8.125rem;
 }
 
-#lol {
+.testimonies {
     display: flex;
     justify-content: center;
+    margin-bottom: -20px;
+    margin-top: -10px;
+}
+
+.testimony {
+    text-align: justify;
+}
+
+#team {
+    display: flex;
+    justify-content: center;
+    margin-left: 150px;
 }
 
 .description{
@@ -311,18 +355,12 @@ figcaption {
     margin-right: 60px;
    display: flex;
    justify-content: center;
-}
-
-i {
-    margin-left: 60px;
-    margin-right: 60px;
-   display: flex;
-   justify-content: center;
+   margin-bottom: 150px;
+   text-align: justify;
 }
 
 figcaption {
-    display: flex;
-    justify-content: center;
+padding-left: 135px;
 }
 
 .main-menu {
@@ -333,9 +371,9 @@ figcaption {
 
 footer {
     background: #1F1F1F;
-    padding:10px;
     display: flex;
     justify-content: space-between;
+    font-size: small;
 }
 
 .logo-text {
@@ -344,9 +382,14 @@ footer {
     color: white;
 }
 
+#footer-logo {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
 .footer-logos {
     display: flex;
-    margin-top: 40px;
+    margin-top: 15px;
     justify-content: space-around;
     gap: 30px;
     margin-left: 150px;
@@ -354,7 +397,7 @@ footer {
 }
 
 .footer-text {
-    margin-top: 60px;
+    margin-top: 10px;
     text-align: center;
     margin-left: 140px;
     font-size: larger;
@@ -378,20 +421,15 @@ nav a, nav p {
     background-color: #1F1F1F;
     text-align: center;
     color: white;
-    padding-bottom: 15px;
-    padding-top: 40px;
+    padding-bottom: 5px;
 }
 
 li {
-    margin-top: 25px;
+    margin-top: 5px;
     list-style: none;
 }
 
 li a:hover {
-    text-decoration: underline;
-}
-
-li p:hover {
     text-decoration: underline;
 }
 
@@ -403,8 +441,4 @@ li p:hover {
 nav.footer-menu {
     padding-top: 10px ;
     text-align: center;
-}
-
-#number {
-    margin-top: 22px;
 }
