--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -428,6 +428,11 @@ i[class="fa-solid fa-bed"] {
     line-height: 2em;
 }
 
+.footer a:hover {
+    text-decoration: underline;
+    font-weight: inherit;
+}
+
 .footer li {
     color: #ffffff;
     font-size: 0.9rem;
