--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -125,8 +125,9 @@ p {
 
 footer {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    height: 402px;
+    height: 20%;
     justify-content: space-between;
     background-color: black;
     color: white;
