--- a/asset/css/aboutus.css
+++ b/asset/css/aboutus.css
@@ -109,14 +109,14 @@ h1{
     background-repeat: no-repeat;
     background-size: 100%;
     padding: 66px 42px 28px 50px;
-    background-image: url(file:///C:/Users/marie/Downloads/np_Blue-house-wall-with-window-and-vines_4ZDx90_free.jpeg)
+    background-image: url(../images/aboutus/np_Blue-house-wall-with-window-and-vines_4ZDx90_free.jpeg)
 }
 
 .mission{
     background-repeat: no-repeat;
     background-size: 100%;
     padding: 66px 42px 28px 50px;
-    background-image: url(file:///C:/Users/marie/Downloads/np_Estate-agent-presenting-house-to-buyers_4APkW5_free_1.jpeg)
+    background-image: url(../images/aboutus/np_Estate-agent-presenting-house-to-buyers_4APkW5_free_1.jpeg)
 }
 
 
@@ -124,14 +124,14 @@ h1{
     background-repeat: no-repeat;
     background-size: 100%;
     padding: 66px 42px 28px 50px;
-    background-image: url(file:///C:/Users/marie/Downloads/np_Group-of-students-doing-teamwork-together-for-project_5okA95_free.jpeg)
+    background-image: url(../images/aboutus/np_Group-of-students-doing-teamwork-together-for-project_5okA95_free.jpeg)
 }
 
 .valeurs{
     background-repeat: no-repeat;
     background-size: 100%;
     padding: 66px 42px 28px 50px;
-    background-image: url(file:///C:/Users/marie/Downloads/np_Close-up-top-view-of-young-people-putting-their-hands-together_4dPka4_free.jpeg)
+    background-image: url(../images/aboutus/np_Close-up-top-view-of-young-people-putting-their-hands-together_4dPka4_free.jpeg)
 }
 
 
@@ -139,7 +139,7 @@ h1{
     background-repeat: no-repeat;
     background-size: 100%;
     padding: 66px 42px 28px 50px;
-    background-image: url(file:///C:/Users/marie/Downloads/np_Traditional-wall-stone-stable-and-house_4m1vQ4_free.jpeg)
+    background-image: url(../images/aboutus/np_Traditional-wall-stone-stable-and-house_4m1vQ4_free.jpeg)
 }
 
 .rectangle-vert{
