--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -1,5 +1,5 @@
 /*
-ajouter image a droite des offres, améliorer les offres,
+améliorer les offres,
 améliorer le paging 
 optimiser le code
 terminer le code 
