--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -12,6 +12,12 @@ avec bp = break point
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2? family= Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600; 1 700 ; 1 800 & display=swap');
 
+
+:root {
+    --main-color: #b1f3bc;
+    --third-color: white;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -59,6 +65,15 @@ body header nav a:hover {
 
 #account {
     margin-top: 0.375rem;
+}
+
+#logo {
+    width: 82.5px;
+    height: 40.15px;
+}
+
+#logo:hover {
+    transform: scale(1.1);
 }
 
 .menu {
@@ -115,7 +130,7 @@ body header nav a:hover {
 #research {
     background-color: #B1F3BC;
     border-radius: 0.313rem;
-    padding: 0.313remx;
+    padding: 0.313rem;
     cursor: pointer;
 }
 
@@ -138,9 +153,10 @@ body header nav a:hover {
     margin: 0.25rem;
 }
 
-.reinitiate:hover {
+.refresh-logo-reinitiate:hover {
     font-weight: bold;
 }
+
 /* comment ajuster la hauter de mon formulaire choix du contrat ? */
 .form-contract {
     display: flex;
@@ -183,7 +199,12 @@ body header nav a:hover {
 #offer-photo {
     border-radius: 0.938rem;
     padding-bottom: 0.313rem;
+    transition: transform 0.5s;
 } 
+
+#offer-photo:hover {
+    transform: scale(1.1);
+}
 
 .photos-map {
     display: flex;
@@ -226,6 +247,8 @@ body header nav a:hover {
   border-radius: 50px; /* La moitié de la hauteur pour créer un cercle */
   padding: 10px; /* Ajoutez du rembourrage pour un meilleur aspect */
   cursor: pointer;
+  margin-left: 20px;
+  margin-top: 5px;
 }
 
 .agent {
@@ -238,7 +261,7 @@ body header nav a:hover {
     margin-left: 20rem;
     color: grey;
     font-size: x-small;
-    margin-top: 5px;
+    margin-top: 9px;
 }
 
 .section2 {
@@ -266,6 +289,10 @@ body header nav a:hover {
     color: white;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.to-apply:hover {
+    transform: scale(1.05);
 }
 
 .section3 {
@@ -378,75 +405,75 @@ padding-left: 135px;
 }
 
 footer {
-    background: #1F1F1F;
-    display: flex;
-    justify-content: space-between;
-    font-size: small;
+    background-color: #1f1f1f;
+    font-size: 1.1rem;
+    cursor: default;
 }
 
-.logo-text {
+.social-media {
+    color: var(--third-color);
     display: flex;
-    flex-direction: column;
-    color: white;
-}
-
-#footer-logo {
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
-.footer-logos {
-    display: flex;
-    margin-top: 15px;
-    justify-content: space-around;
+    flex-direction: row;
+    margin-top: 20px;
     gap: 30px;
-    margin-left: 150px;
-    filter: invert(1)
-}
-
-.footer-text {
-    margin-top: 10px;
-    text-align: center;
     margin-left: 140px;
-    font-size: larger;
 }
 
-nav a, nav p {
-    text-decoration: none;
-    color: white;
-    margin: 30px;
-    font-size: larger;
-    text-align: center;
+#fb:hover, #tw:hover, #insta:hover {
+    transform: scale(1.5);
 }
 
-.footer-menu {
+footer p, footer h2, footer li {
+    color: var(--third-color);
+}
+
+.colonne {
     display: flex;
-    flex-direction: column;
-    margin-top: 5px;
+    padding-top: 0.675rem;
 }
 
-.copyright {
-    background-color: #1F1F1F;
-    text-align: center;
-    color: white;
-    padding-bottom: 5px;
+footer ul {
+    flex-flow: column;
 }
 
-li {
-    margin-top: 5px;
+footer li {
     list-style: none;
 }
 
-li a:hover {
+footer li:hover:not(.number) {
     text-decoration: underline;
+    cursor:pointer;
 }
 
-.footer-menu p {
-    margin-top: 1px;
-    margin-bottom: 1px;
+.number {
+    cursor: default;
 }
 
-nav.footer-menu {
-    padding-top: 10px ;
+.footer-services, .footer-access, .footer-contact {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-access, .footer-contact, .footer-services {
+    padding-left: 7.6rem;
+}
+
+.copyright {
+    padding-bottom: 0.675rem;
     text-align: center;
+}
+
+.footer-logo img {
+    width: 82.5px;
+    height: 40.15px;
+    margin-left: 10px;
+}
+
+.footer-logo img:hover {
+    transform: scale(1.1);
+}
+
+footer p {
+margin-left: 80px;
+margin-top: 20px;
 }
