--- a/asset/css/buy.css
+++ b/asset/css/buy.css
@@ -69,6 +69,11 @@ h1{
     height: 4rem;
 }
 
+input::placeholder{
+    color: black;
+    font-size: 3rem;
+}
+
 .ville{
     background-color: #f2fbb7;
     padding-left: 7rem;
