--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -1,57 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2? family= Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600; 1 700 ; 1 800 & display=swap');
-
+@font-face {
+    font-family: "baloo2";
+    src: url(../fonts-family/Baloo2-Medium.ttf);
+}
+@font-face {
+    font-family: "opensans";
+    src: url(../fonts-family/OpenSans/OpenSans-Regular.ttf);
+}
+:root {
+    --main-color: #b1f3bc;
+    --third-color: white;
+}
 * {
     padding: 0;
     margin: 0;
 }
-
 a {
     text-decoration: none;
+    color: #000;
 }
+.title-txt {
+    font-family: "Baloo2", sans-serif;
+    font-size: 1.4rem;
+}
+.flex {
+    display: flex;
+}
+.justify-content{
+    justify-content: space-between;
+}
+.align-item{
+    align-items: center;
+}
+.menu li {
+    list-style: none;
+    margin: 0 40px 0 0;
+}
+.menu li:hover, .logo-mon-compte:hover {
+    font-weight: bolder;
+}
+
+header {
+    background-color: var(--main-color);
+    font-family: baloo2;
+    font-size: 1.4rem;
+    padding: 0.675rem;
+}
+/*A MODIFIER*/
 a, h1, h2, h3, h4, h5, h6 {
-    font-family: "baloo 2";
+    font-family: "baloo2";
     font-weight: 500;
     font-size: 20px;
 }
-header {
-    background-color: #b1f3bc; 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
- }
-    
-.logo {
-    padding: 10px;
-}
-
-.menu {
-    display: flex;
-    list-style: none;
-}
-
-.menu li {
-    margin-right: 44px;
-}
-
-.menu a {
-    font-size: 24px;
-        color: black;
-}
-
-.menu a:hover {
-    color: black;
-    font-weight: bolder;
-}
-
-.logo-my-account {
-    color: black;
-}
-.logo-my-account a:hover {
-    color: #000;
-    font-weight: bolder;
-}
-
 .contact {
     text-align: center;
     padding-bottom: 20px;
@@ -74,15 +73,15 @@ h4 {
     
 }
 
-name, first-name, email {
-    background-color: #b1f3bc;
-    justify-content: space-between;
-    
-    
-}
-    
-
-label-message {
+.formatting {
+    #name, #first-name, #email, #subjet-select, #message{
+        background-color: #b1f3bc;        
+    }
+    width: 50%;
+    padding: 0 10px;
+} 
+ 
+.label-message {
     height: max-content;
  
 }
@@ -93,8 +92,8 @@ label-message {
     padding-top: 20px;
     padding-bottom: 20px;
     position: relative;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 35%;
+    margin-right: auto;
 }
 
 footer {
